# Dubhe

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  taskfile.yaml
.github/workflows/: test.yml
conf/: test.yaml
conf/cluster/: node1.yaml
crates/mqtt_client/: Cargo.toml
crates/mqtt_client/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  transport.rs
crates/mqtt_client/src/session/: mod.rs  v4.rs  v5.rs
crates/mqtt_codec/: Cargo.toml  README.md
crates/mqtt_codec/examples/: v4_builder.rs  v5_builder.rs
crates/mqtt_codec/src/: error.rs  lib.rs
crates/mqtt_codec/src/v4/: builder.rs  codec.rs  encoder.rs  mod.rs  packet.rs  return_codes.rs  validation.rs
crates/mqtt_codec/src/v5/: codec.rs  encoder.rs  properties_codec.rs  property_id.rs
crates/mqtt_codec/tests/: v4.rs  v5.rs
crates/mqtt_codec/tests/v4/: builder.rs  return_codes.rs  wire_and_limits.rs
crates/mqtt_codec/tests/v5/: codec.rs
docs/: temp.md
docs/dev/: 01-project-overview.md  02-requirements.md  03-architecture.md  04-roadmap.md  05-quick-start.md  06-codec-implementation.md  07-broker-implementation.md  08-plugin-development.md  09-api-design.md  10-database-design.md  11-ui-design.md  README.md
dubhe/: Cargo.toml
dubhe-api/: Cargo.toml
dubhe-api/src/: config.rs  lib.rs  router.rs  server.rs
dubhe-mqtt/: Cargo.toml
dubhe-mqtt/src/: codec.rs  lib.rs  server.rs  service.rs  version.rs
dubhe-raft/: Cargo.toml
dubhe-raft/src/: config.rs  raft.rs  raft_node.rs  raft_service.rs
dubhe-web/: package.json  vite.config.ts
dubhe-web/src/: main.ts  style.less
dubhe-web/src/layout/: DashboardLayout.vue  Header.vue  Sidebar.vue  SidebarNavMenu.vue
dubhe-web/src/pages/: test.vue
dubhe-web/src/router/: index.ts
dubhe-web/src/stores/: layout.ts
dubhe-web/src/style/: base.less
dubhe/src/: app.rs  config.rs  main.rs
dubhe/src/api/: config.rs  mod.rs  server.rs
mqtt-client-test/: go.mod  main.go
mqtt-codec/: Cargo.toml
mqtt-codec-v3/: Cargo.toml
mqtt-codec-v3/src/: codec.rs  decoder.rs  encoder.rs  lib.rs
mqtt-codec-v4/: Cargo.toml
mqtt-codec-v5/: Cargo.toml
mqtt-codec/doc/: test.md
mqtt-codec/src/: lib.rs  types.rs
mqtt-codec/src/v3/: codec.rs  decoder.rs  encoder.rs  mod.rs  packet.rs
mqtt-codec/src/v4/: codec.rs  connect.rs  decoder.rs  header.rs  mod.rs  packet.rs
mqtt-codec/src/v5/: codec.rs  connack.rs  connect.rs  decoder.rs  encoder.rs  header.rs  mod.rs  packet.rs  ping.rs
mqtt_codec/: README.md
mqtt_codec/examples/: v4_encode.rs  v5_encode.rs
mqtt_codec/src/v4/: builder.rs  decoder.rs  mod.rs  return_codes.rs  tests.rs  validation.rs
mqtt_codec/src/v5/: builder.rs  codec.rs  decoder.rs  mod.rs  packet.rs  properties_codec.rs  tests.rs  validation.rs
mqtt_codec/tests/v4/: roundtrip.rs  validation.rs
mqtt_codec/tests/v5/: builder.rs  validation.rs
tower/: Cargo.toml
tower-mqtt/: Cargo.toml  README.md
tower-mqtt/src/: config.rs  decoder.rs  lib.rs  server.rs  service.rs  topic.rs  types.rs  version.rs
tower-mqtt/src/v3/: codec.rs  decoder.rs  encoder.rs  server.rs
tower-mqtt/src/v5/: codec.rs  decoder.rs  encoder.rs  mod.rs  server.rs
tower-raft/: Cargo.toml  README.md  build.rs
tower-raft/proto/: eraft.proto  raft_service.proto
tower-raft/src/: config.rs  eraftpb.rs  lib.rs  message.rs  raft.rs  raft_node.rs  raft_server.rs
tower/src/: app.rs  config.rs  main.rs
tower/src/api/: server.rs
