[package]
name = "dubhe"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "dubhe"
path = "src/main.rs"
test = false
bench = false


[dependencies]
dubhe_mqtt = { path = "../dubhe-mqtt" }
dubhe_raft = { path = "../dubhe-raft" }

axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
mime_guess = "2.0"
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
