[package]
name = "tower"
author = "gsxhnd"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "things_tower"
path = "src/main.rs"
test = false
bench = false


[dependencies]
tower_mqtt = {path = "../tower-mqtt"}
tower_raft = {path = "../tower-raft"}

axum = {version = "0.6"}
clap = { version = "4.2.7", features = ["derive","env"] }
futures = { workspace = true }
mqtt-codec = "0.3.0"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true}
tokio = { workspace = true, features = ["full"] }
tokio-util = {workspace = true, features = ["codec"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
