[package]
name = "tower"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "things_tower"
path = "src/main.rs"
test = false
bench = false


[dependencies]
tower_mqtt = {path = "../tower-mqtt"}
tower_raft = {path = "../tower-raft"}

axum = { workspace = true }
clap = { workspace = true, features = ["derive","env"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true}
tokio = { workspace = true, features = ["full"] }
tokio-util = {workspace = true, features = ["codec"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
