[package]
name = "mqtt_codec"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description = ""
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }

[[example]]
name = "v4_encode"
path = "examples/v4_encode.rs"

[[example]]
name = "v4_builder"
path = "examples/v4_builder.rs"

[[example]]
name = "v5_encode"
path = "examples/v5_encode.rs"

[[example]]
name = "v5_builder"
path = "examples/v5_builder.rs"
